--- a/team.html
+++ b/team.html
@@ -94,7 +94,7 @@
         </div>
         <div class="team-member">
             <img src="subhasg.jpg" alt="Team Member 2">
-            <h2>Subhas Munain</h2>
+            <h2>Subhash Munain</h2>
             <p>Front End Developer </p>
         </div>
     
