--- a/team.html
+++ b/team.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="refresh" content="5"> -->
+    <meta http-equiv="refresh" content="5">
     <title>Team - SMART SOLAR</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
             /* background-color: blanchedalmond; */
-            height: 100vh;
+            max-height: 170vh;
             width: 100vw;
             overflow-y: scroll;
         }
