--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#">Photos</a>
                 <a href="#">Videos</a>
                 <a href="team.html">Team Members</a>
-                <a href="https://www.google.com/">Report</a>
+                <a href="Report .pdf">Report</a>
             </div>
         </div>
     </header>
