--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <video class="main-bg" src="main-bg.mp4" autoplay loop muted></video>
     <header>
         <div id="navbar">
-            <a id="logo"></a>
+            <a id="logo">𝔰𝔪𝔞𝔯𝔱𝔰𝔬𝔩𝔞𝔯</a>
             <div class="navbar-content">
                 <a href="#">Photos</a>
                 <a href="#">Videos</a>
