--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="navbar">
             <a id="logo">𝔰𝔪𝔞𝔯𝔱𝔰𝔬𝔩𝔞𝔯</a>
             <div class="navbar-content">
-                <a href="#">Photos</a>
-                <a href="#">Videos</a>
+                <!-- <a href="https://youtube.com/watch?v=dgZl5c3wPeQ&feature=shared">Photos</a> -->
+                <a href="https://youtube.com/watch?v=dgZl5c3wPeQ&feature=shared">Videos</a>
                 <a href="team.html">Team Members</a>
                 <a href="Report .pdf">Report</a>
             </div>
